<resources>
    <string name="app_name">Hello Toast</string>
    <string name="button_label_toast">Toast</string>
    <string name="button_label_count_up">Up</string>
    <string name="button_label_count_down">Down</string>
    <string name="button_label_reset">Reset</string>
    <string name="count_initial_value">0</string>
    <string name="toast_message">Hello Toast!  \nBenjmain Thiessen \nT00642365</string>
</resources>